Continued work on mirrors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,7 @@
     "pointermove",
     "stackblitz",
     "statemachine"
-  ]
+  ],
+  "fiveServer.highlight": false,
+  "fiveServer.navigate": true
 }
